# comp

./: .gitignore  AGENTS.md  Cargo.toml  INSTALL.md  LICENSE  README.md  USAGE.md  nested_if.cm  temperature.cm  triangle.cm
gui/: index.html  package-lock.json  package.json
gui/src/: App.css  App.jsx  App.tsx  commands.ts  index.css
lib/: avg_hex.cm  color_average.cm  dcolor_average.cm  double_high.cm  factorial.cm  fib.cm  nested_if.cm  nodes_edges.cm  nodes_to_edges.cm  power2.cm  triangle.cm
src/: cmdin.rs  comp.jl  comp.rs  comp.toml  comp_test.rs  coq.rs  cor.rs  main.rs  mona.rs  poc.rs  qoc.rs
support/: comp.md  comp.toml  comp.vim
test/: comp.test.rs  functions  functions.cm  functions_check  map.output  maths  maths.cm  maths.cmp  maths_check  nested_if.cm  test.rs
tests/: fold.cm  functions.cm  map.cm  map.output  maths.cm  memory.cm  scan.cm  tests.sh
