[package]
name = "comp"
version = "0.21.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "comp"
path = "src/comp.rs"

[dependencies]
colored = "2"
rand = "0.8.5"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
